shopping-list/shopping-list-template.yml
# Templates

## Deployment

kind: Deployment
metadata:
  name: shopping-list-deployment
  annotations:
    version: 0.0.1-SNAPSHOT
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: shopping-list
        component: shopping-list
    spec:
      containers:
        - name: shopping-list
          image: shopping-list:0.0.1-SNAPSHOT
            ports:
            - containerPort: 8080
            - containerPort: 8443
          lifecycle:
            preStop:
              exec:
                # SIGTERM triggers a quick exit; gracefully terminate instead
                command: ["kill", "-SIGINT", "`pidof java`"]
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              initialDelaySeconds: 3
              periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              initialDelaySeconds: 3
              periodSeconds: 3
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
## Service

kind: Service
apiVersion: v1
metadata:
  name: shopping-list
spec:
  selector:
    app: shopping-list
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
    - protocol: TCP
      port: 443
      targetPort: B443
  type: LoadBalancer

---
## Route
apiVersion: v1
kind: Route
metadata:
  name: shopping-list
spec:
  #host: www.example.com
  to:
    kind: Service
    name: shopping-list
  tls:
    termination: passthrough
