shopping-list/shopping-list-template2.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: shopping-list-deployment
  annotations:
    version: 0.0.1-SNAPSHOT
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-list
  template:
    metadata:
      labels:
        app: shopping-list
    spec:
      containers:
        - name: shopping-list
          image: shopping-list:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
            - containerPort: 8443
          resources:
            requests:
              memory: "128Mi"
            cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          #         livenessProbe:
          #           httpGet:
          #             path: /actuator/health/liveness
          #             port: 8080
          #           initialDelaySeconds: 120
          #           periodSeconds: 10
          #         readinessProbe:
          #           httpGet:
          #             path: /actuator/health/readiness
          #             port: 8080
          #           initialDelaySeconds: 120
          #           periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                # SIGTERM triggers a quick exit; gracefully terminate instead
                command: ["kill", "-SIGINT", "`pidof java`"]
---
kind: Service
apiVersion: v1
metadata:
  name: shopping-list-service
spec:
  selector:
    app: shopping-list
  ports:
    - name: port1
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: port2
      protocol: TCP
      port: 443
      targetPort: 8443
  type: LoadBalancer
---
kind: Route
apiVersion: v1
metadata:
  name: shopping-list-route
spec:
  to:
    kind: Service
    name: shopping-list-service
  tls:
    termination: passthrough
